--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,12 @@ on:
       kubernetes_version:
         description: 'Kubernetes Version'
         required: true
-        default: 'v1.24.0'
+        default: 'v1.23.10'
         type: string
       minikube_version:
         description: 'Minikube Version'
         required: true
-        default: 'v1.25.2'
+        default: 'v1.27.1'
         type: string
 
 jobs:
@@ -24,17 +24,11 @@ jobs:
     strategy:
       matrix:
         kubernetes_version: 
-          - v1.24.0
-          - v1.23.6
-          - v1.22.9
+          - v1.23.10
         include:
-          - kubernetes_version: v1.24.0
-            minikube_version: v1.25.2
-          - kubernetes_version: v1.23.6
-            minikube_version: v1.25.2
-          - kubernetes_version: v1.22.9
-            minikube_version: v1.25.2
-
+          - kubernetes_version: v1.23.10
+            minikube_version: v1.27.1
+            docker_image: 20.10.20-dind
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -57,6 +51,7 @@ jobs:
         env:
           KUBERNETES_VERSION: ${{ matrix.kubernetes_version }}
           MINIKUBE_VERSION: ${{ matrix.minikube_version }}
+          DOCKER_IMAGE: ${{ matrix.docker_image }}
 
       - name: Push Docker image
         # Only push when on main/master branch, not on pull requests
