--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build Kind Image
         run: |
           chmod +x ./build.sh
-          ./build.sh nosugarcoffee/kind:latest-${{ matrix.kubernetes_version }} nosugarcoffee/kind:${{ github.sha }}-${{ matrix.kubernetes_version }}
+          ./build.sh nosugarcoffee/kind:latest-${{ matrix.kubernetes_version }} nosugarcoffee/kind:${{ matrix.kubernetes_version }}
         env:
           KUBERNETES_VERSION: ${{ matrix.kubernetes_version }}
           MINIKUBE_VERSION: ${{ matrix.minikube_version }}
@@ -58,4 +58,3 @@ jobs:
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         run: |
           docker push nosugarcoffee/kind:latest-${{ matrix.kubernetes_version }}
-          docker push nosugarcoffee/kind:${{ github.sha }}-${{ matrix.kubernetes_version }}
