--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,24 +37,43 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        # Only login when pushing to main/master branch, not on pull requests
-        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Generate image tags
+        id: generate-tags
+        run: |
+          # For main/master branch pushes or manual workflow runs
+          if [[ "${{ github.event_name }}" == "push" || "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "BUILD_TAG=nosugarcoffee/kind:latest-${{ matrix.kubernetes_version }}" >> $GITHUB_OUTPUT
+            echo "VERSION_TAG=nosugarcoffee/kind:${{ matrix.kubernetes_version }}" >> $GITHUB_OUTPUT
+          # For pull requests
+          elif [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            SHORT_SHA=$(echo "${{ github.sha }}" | cut -c1-7)
+            echo "BUILD_TAG=nosugarcoffee/kind:${SHORT_SHA}-${{ matrix.kubernetes_version }}" >> $GITHUB_OUTPUT
+            echo "VERSION_TAG=nosugarcoffee/kind:${SHORT_SHA}-${{ matrix.kubernetes_version }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build Kind Image
         run: |
           chmod +x ./build.sh
-          ./build.sh liangliangdai/kind:latest-${{ matrix.kubernetes_version }} liangliangdai/kind:${{ matrix.kubernetes_version }}
+          ./build.sh ${{ steps.generate-tags.outputs.BUILD_TAG }} ${{ steps.generate-tags.outputs.VERSION_TAG }}
         env:
           KUBERNETES_VERSION: ${{ matrix.kubernetes_version }}
           MINIKUBE_VERSION: ${{ matrix.minikube_version }}
           DOCKER_IMAGE: ${{ matrix.docker_image }}
 
-      - name: Push Docker image
-        # Only push when on main/master branch, not on pull requests
+      - name: Push Docker image for PR
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "Pushing PR image: ${{ steps.generate-tags.outputs.VERSION_TAG }}"
+          docker push ${{ steps.generate-tags.outputs.VERSION_TAG }}
+
+      - name: Push Docker images for main/master
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         run: |
-          docker push liangliangdai/kind:latest-${{ matrix.kubernetes_version }}
+          echo "Pushing latest and versioned images"
+          docker push ${{ steps.generate-tags.outputs.BUILD_TAG }}
+          docker push ${{ steps.generate-tags.outputs.VERSION_TAG }}
